[package]
name = "prevue"
version = "0.0.3"
edition = "2024"
rust-version = "1.88"
authors = ["morugetsm <shouu6@gmail.com>"]
description = "An HTML templating engine that uses Vue's template syntax."
license = "MIT"
repository = "https://github.com/morugetsm/prevue"
readme = "README.md"
keywords = ["template", "html", "vue"]
categories = ["template-engine"]

[dependencies]
anyhow = "1.0"
boa_engine = { version = "0.21", features = ["deser"] }
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
regex = "1.12"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
